--- a/week-8/assignments/dukaan-clone/package.json
+++ b/week-8/assignments/dukaan-clone/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@storybook/react-vite": "^8.6.11",
+    "@storybook/test-runner": "^0.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
