--- a/week-11/worker-app-1/package.json
+++ b/week-11/worker-app-1/package.json
@@ -6,7 +6,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.5.0",
-    "hono": "^4.7.5"
+    "@prisma/extension-accelerate": "^1.3.0",
+    "hono": "^4.7.5",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250214.0",
